--- a/assignment1.html
+++ b/assignment1.html
@@ -371,7 +371,7 @@ summary {
 
 <div id="assignment-1" class="section level1">
 <h1>Assignment 1</h1>
-<p><a href="http://github.com/zxzheng23" class="uri">http://github.com/zxzheng23</a></p>
+<p><a href="http://github.com/zxzheng23">My Github Profile</a></p>
 <div id="my-goals-for-hudk4050" class="section level2">
 <h2>My Goals for HUDK4050</h2>
 <ul>
@@ -397,15 +397,11 @@ summary {
 <tbody>
 <tr class="odd">
 <td align="center">web scraping and text mining</td>
-<td align="center">4</td>
+<td align="center">4/10</td>
 </tr>
 <tr class="even">
 <td align="center">I like the information these videos are providing and how detailed they are.</td>
-<td align="center"></td>
-</tr>
-<tr class="odd">
 <td align="center">Can you show us more R skills?</td>
-<td align="center"></td>
 </tr>
 </tbody>
 </table>
