Update the portfolio link

--- a/assignment1.html
+++ b/assignment1.html
@@ -371,9 +371,9 @@ summary {
 
 <div id="assignment-1" class="section level1">
 <h1>Assignment 1</h1>
-<p><a href="https://github.com/YenlingCheng/assignment1">Yen-Ling Cheng’s Portfolio Page</a></p>
-<div id="assignment-1-my-goals-for-hudk4050" class="section level2">
-<h2>Assignment 1 My Goals for HUDK4050</h2>
+<p><a href="https://github.com/YenlingCheng">Yen-Ling Cheng’s Portfolio Page</a></p>
+<div id="my-goals-for-hudk4050" class="section level2">
+<h2>My Goals for HUDK4050</h2>
 <ul>
 <li>Learn how to create data visualizations using R</li>
 <li>To be familiar with data wrangling</li>
@@ -385,8 +385,8 @@ summary {
 <p>I like how the videos are broken down into different episodes.I wonder if you can add more graphics or images along with the videos to help understand more about the concepts you mentioned in the videos.</p>
 <table>
 <colgroup>
-<col width="50%"></col>
-<col width="50%"></col>
+<col width="74%"></col>
+<col width="25%"></col>
 </colgroup>
 <thead>
 <tr class="header">
@@ -397,7 +397,7 @@ summary {
 <tbody>
 <tr class="odd">
 <td>Data Visualiization</td>
-<td>4</td>
+<td>2</td>
 </tr>
 <tr class="even">
 <td>Would like to see more graphics or visual elements that help understand the concept</td>
