--- a/assignment1.html
+++ b/assignment1.html
@@ -122,7 +122,7 @@ $(document).ready(function () {
 </div>
 
 
-<p>Github Profile Link: <a href="https://github.com/AndyChenHe" class="uri">https://github.com/AndyChenHe</a></p>
+<p><a href="https://github.com/AndyChenHe">Github Profile Link</a></p>
 <div id="my-goals-for-hudk4050" class="section level2">
 <h2>My Goals for HUDK4050</h2>
 <ul>
@@ -135,6 +135,24 @@ $(document).ready(function () {
 <div id="video-review" class="section level2">
 <h2>Video Review</h2>
 <p>Videos’ contents are nice and concise. All instructions are pretty clear and organized. I hope we can keep this concise form.</p>
+<table>
+<thead>
+<tr class="header">
+<th>Skill</th>
+<th>Score</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>Coding</td>
+<td>4</td>
+</tr>
+<tr class="even">
+<td>I love all videos</td>
+<td>some are blurred</td>
+</tr>
+</tbody>
+</table>
 <pre class="r"><code>library(knitr)
 dataInfo &lt;- matrix(c('Coding',7,'All Videos are concise and great. I hope we can have more live coding videos.','Maybe we can improve some videos\' quality. They are only 360P. '),ncol=2,byrow=TRUE)
 colnames(dataInfo) = c('Skill', 'Score')
