updated version of Assignment 1

--- a/assignment1.html
+++ b/assignment1.html
@@ -371,8 +371,7 @@ summary {
 
 <div id="assignment-1" class="section level1">
 <h1>Assignment 1</h1>
-<!--my Github profile page-->
-<p><a href="https://github.com/Yifei0710" class="uri">https://github.com/Yifei0710</a></p>
+<p><a href="https://github.com/Yifei0710">My Github Profile</a></p>
 <div id="my-goals-for-hudk4050" class="section level2">
 <h2>My Goals for HUDK4050</h2>
 <ul>
