--- a/assignment1.html
+++ b/assignment1.html
@@ -371,7 +371,7 @@ summary {
 
 <div id="assignment-1" class="section level1">
 <h1>Assignment 1</h1>
-<p><a href="https://github.com/amanda-ago" class="uri">https://github.com/amanda-ago</a></p>
+<p><a href="https://github.com/amanda-ago">My Github</a></p>
 <div id="my-goals-for-hudk4050" class="section level2">
 <h2>My Goals for HUDK4050</h2>
 <ul>
