Assignment Submit! Yingxin Ye

--- a/assignment1.html
+++ b/assignment1.html
@@ -386,7 +386,7 @@ summary {
 <p>I really like the video transcript, it helps to get to know the vocab, especially for the new learners in this field.</p>
 <p>| Skill | Score |<br />
 | Coding | 3 |<br />
-|video transcript| Speed up the pacing|</p>
+|video transcript| speed up the pace a bit|</p>
 </div>
 <div id="this-is-how-i-am-feeling-about-the-semester" class="section level2">
 <h2>This is how I am feeling about the semester</h2>
