submit assignment change - fix the table

--- a/assignment1.html
+++ b/assignment1.html
@@ -384,9 +384,24 @@ summary {
 <div id="video-review" class="section level2">
 <h2>Video Review</h2>
 <p>I really like the video transcript, it helps to get to know the vocab, especially for the new learners in this field.</p>
-<p>| Skill | Score |<br />
-| Coding | 3 |<br />
-|video transcript| speed up the pace a bit|</p>
+<table>
+<thead>
+<tr class="header">
+<th>Skill</th>
+<th>Score</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>Coding</td>
+<td>3</td>
+</tr>
+<tr class="even">
+<td>Video transcript</td>
+<td>Speed up the pace a bit</td>
+</tr>
+</tbody>
+</table>
 </div>
 <div id="this-is-how-i-am-feeling-about-the-semester" class="section level2">
 <h2>This is how I am feeling about the semester</h2>
