Xing Yixie Assignment 1 file

--- a/assignment1.html
+++ b/assignment1.html
@@ -398,7 +398,7 @@ summary {
 <td align="left">8</td>
 </tr>
 <tr class="even">
-<td align="right">videos</td>
+<td align="right">Videos</td>
 <td align="left">Perfect</td>
 </tr>
 </tbody>
