Xingyi Xie Assignment 1

--- a/assignment1.html
+++ b/assignment1.html
@@ -9,7 +9,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Xing Yixie" />
+<meta name="author" content="Xingyi Xie" />
 
 
 <title>Assignment 1</title>
@@ -363,7 +363,7 @@ summary {
 
 
 <h1 class="title toc-ignore">Assignment 1</h1>
-<h4 class="author">Xing Yixie</h4>
+<h4 class="author">Xingyi Xie</h4>
 <h4 class="date">9/8/2020</h4>
 
 </div>
